--- a/frontend/src/Components/Footer/footer.css
+++ b/frontend/src/Components/Footer/footer.css
@@ -21,3 +21,10 @@
   justify-content: space-between;
   gap: 1px;
 }
+
+.bck-top {
+  border: 2px solid black;
+  border-radius: 50px;
+  margin-bottom: 1.5rem;
+  padding: 0.5rem;
+}
