--- a/frontend/src/Components/Header/header.css
+++ b/frontend/src/Components/Header/header.css
@@ -29,20 +29,27 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding: 1rem;
+    /* padding: 1rem; */
   }
 }
 
 @media (max-width: 750px) {
+  .logo-head {
+    /* font-size: 0.5rem; */
+    display: none;
+  }
+}
+
+/* @media (max-width: 750px) {
   .left-head {
     display: none;
   }
-}
-@media (max-width: 750px) {
+} */
+/* @media (max-width: 750px) {
   .right-head {
     display: none;
   }
-}
+} */
 
 ul {
   display: flex;
@@ -68,18 +75,18 @@ ul {
     margin-top: 0.7rem;
   }
 }
-
+/* 
 .nav-burger {
   display: none;
 }
 
 @media (max-width: 750) {
   .nav-burger {
-    display: block !important;
-    /* font-size: 20px; */
+    display: block;
+    width: 20vw;
+    font-size: 2rem;
   }
-}
-
+} */
 .search-bar {
   display: flex;
   width: 100vw;
@@ -105,11 +112,11 @@ ul {
   font-size: 1.3rem;
 }
 
-@media (max-width: 750px) {
+/* @media (max-width: 750px) {
   .header-icon {
     display: none;
   }
-}
+} */
 
 .login-list {
   display: flex;
