--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -12,12 +12,14 @@ a:visited {
 }
 
 .App {
+  position: relative;
   text-align: center;
   margin: 0 auto;
   width: 100vw;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  background-color: #4f4e4e;
 }
 
 * {
