--- a/frontend/src/Components/Footer/footer.css
+++ b/frontend/src/Components/Footer/footer.css
@@ -1,18 +1,23 @@
 .footer-div {
   width: 100vw;
   background-color: rgb(239, 237, 237);
-  height: 30vh;
   margin-top: 100px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  gap: 1rem;
   padding-left: 15vw;
   padding-right: 15vw;
   padding-top: 10vh;
+  align-items: center;
+}
+
+.cpyright {
+  font-weight: bold;
 }
 .footer-logo {
   font-weight: bold;
-  font-size: 1.5rem;
+  font-size: 3rem;
 }
 
 .footer-contact {
