--- a/frontend/src/Components/SingleObject/singleObject.css
+++ b/frontend/src/Components/SingleObject/singleObject.css
@@ -10,7 +10,7 @@ a {
   display: flex;
   flex-direction: column;
   margin: 0 auto;
-  margin-bottom: 15rem;
+  margin-bottom: 5rem;
   background-color: rgb(239, 237, 237);
   border-radius: 10%;
 }
@@ -25,19 +25,22 @@ a {
   margin-bottom: 1rem;
   width: 15vw;
   height: 30vh;
-  border-radius: 10%;
+  border-radius: 10px;
+  object-fit: cover;
+  margin-top: 1rem;
 }
 
 @media (max-width: 750px) {
   .single-obj {
-    width: 60vw;
-    height: 40vh;
+    width: 80vw;
+    /* height: 40vh; */
     margin-bottom: 5rem;
   }
 
   .single-obj-picture {
-    /* width: 40vw;
-    height: 20vh; */
+    width: 60vw;
+    height: 30vh;
+    object-fit: cover;
   }
 }
 
