--- a/frontend/src/Pages/OrderPage/orderPage.css
+++ b/frontend/src/Pages/OrderPage/orderPage.css
@@ -1,16 +1,54 @@
-.order-details {
-  /* display: flex; */
-  /* gap: 3rem; */
-  font-size: 1rem;
+.order-section {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 2rem;
+  margin: 2rem;
+}
+.order-section h1 {
+  font-size: 2.5rem;
+  font-weight: bold;
+}
+.order-section p {
+  font-size: 1.7rem;
+  font-weight: normal;
+  margin: 0 auto;
+  padding: 0.5rem;
+}
+.left-sec {
+  width: 50vw;
+  padding: 1rem;
+  background-color: gray;
+  border-radius: 20px;
+}
+.paymnt-info {
+  border: 1px solid black;
+  padding: 2rem;
+  border-radius: 20px;
+  margin: 0.5rem;
+  margin-top: 1rem;
+}
+.ship-info {
+  border: 1px solid black;
+  padding: 2rem;
+  border-radius: 20px;
+}
+.col {
+  border: 1px solid black;
+  padding: 2rem;
+  border-radius: 20px;
+  margin: 0 auto;
 }
 
-.order-details h1 {
-  margin-bottom: 7rem;
+.right-sec {
+  width: 50vw;
+  padding: 1rem;
+  background-color: gray;
+  align-items: center;
+  margin: 0 auto;
+  border-radius: 20px;
 }
 
-.order-details p {
-  font-size: 0.9rem;
-}
 .flex {
   display: flex;
 }
