--- a/frontend/src/Pages/PurchasePage/purchasePage.css
+++ b/frontend/src/Pages/PurchasePage/purchasePage.css
@@ -1,13 +1,19 @@
 .purchase-div {
   background-color: rgb(239, 237, 237);
-  border-radius: 10%;
-  width: 65vw;
+  border-radius: 15px;
+  width: 80vw;
   /* min-height: 70vh; */
   padding: 5rem;
   margin: 0 auto;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+}
+@media (max-width: 750px) {
+  .purchase-div {
+    flex-direction: column;
+    gap: 3rem;
+  }
 }
 
 .purchase-details-left {
@@ -65,6 +71,12 @@
   gap: 1rem;
   width: 30%;
   /* padding-top: 5rem; */
+}
+
+@media (max-width: 750px) {
+  .payment-details-form {
+    width: 90%;
+  }
 }
 
 .payment-details-form input {
