--- a/frontend/src/Pages/ShippingPage/shipping.css
+++ b/frontend/src/Pages/ShippingPage/shipping.css
@@ -1,7 +1,7 @@
 .address-section {
   background-color: rgb(239, 237, 237);
-  border-radius: 10%;
-  width: 65vw;
+  border-radius: 10px;
+  width: 70vw;
   /* min-height: 70vh; */
   padding: 3rem;
   margin: 0 auto;
@@ -14,6 +14,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  gap: 0.5rem;
 }
 
 .address-form label {
@@ -30,7 +31,7 @@
 
 .address-form button {
   background-color: black;
-  border-radius: 15%;
+  border-radius: 10px;
   padding: 1rem;
   font-weight: bold;
   color: white;
