--- a/frontend/src/Pages/ShopCart/shopCart.css
+++ b/frontend/src/Pages/ShopCart/shopCart.css
@@ -1,42 +1,58 @@
-.cart-page {
-  /* background-color: red; */
-  max-width: 100%;
-}
-
 .shop-cart-h5 {
-  width: 30vw;
   margin: 2rem auto 2rem;
-  /* background-color: rgb(239, 237, 237);
-  border-radius: 5%; */
   font-size: 1.5rem;
 }
 
 .shopCart-section {
-  min-height: 70vh;
-  background-color: rgb(239, 237, 237);
-  border-radius: 7%;
-  padding: 3rem;
+  /* background-color: red; */
+  background-color: gray;
+  border-radius: 20px;
+  padding: 2rem;
+  margin: 2rem;
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
 }
 
 .shopCart-list {
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  /* background-color: lightgray; */
+  /* background-color: green; */
 }
 
 .shopCart-item {
-  font-size: 2rem;
+  border: 1px solid black;
+  width: 90%;
+  height: 30%;
+  padding: 1rem;
+  border-radius: 20px;
+  margin: 0 auto;
+  font-size: 1rem;
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  gap: 3rem;
+}
+
+.cart-item-img {
+  width: 20%;
+  object-fit: contain;
+  border-radius: 10px;
+  transition: 0.3s;
+}
+
+.cart-item-img:hover {
+  transform: scale(1.1);
 }
 
 .qty-num {
   background-color: white;
   width: 4rem;
+  border-radius: 10px;
+  margin-bottom: 0.5rem;
 }
 .shopCart-item button {
   border: none;
@@ -44,30 +60,34 @@
 }
 
 .shopCart-item p {
-  font-size: 1.5rem;
+  font-size: 1rem;
 }
 .total-price {
   margin-top: 1rem;
 }
 
-.cart-item-img {
-  width: 20vw;
-  height: 35vh;
-  object-fit: cover;
-  border-radius: 7%;
-  transition: 0.3s;
-}
-.cart-item-img:hover {
-  transform: scale(1.1);
+@media (max-width: 950px) {
+  .shopCart-item {
+    background-color: rgb(239, 237, 237);
+    padding: 1.5rem;
+    border-radius: 10px;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  .shopCart-item button {
+    margin-bottom: 0;
+  }
+  .total-price {
+    margin-top: 0;
+  }
 }
 
 .Pay-btn {
   background-color: black;
-  border-radius: 15%;
+  border-radius: 10px;
   padding: 1rem;
   font-weight: bold;
-  color: white;
-  margin-top: 2rem;
+  color: gray;
 }
 
 .Pay-btn:hover {
