--- a/frontend/src/Pages/SignUp/signUp.css
+++ b/frontend/src/Pages/SignUp/signUp.css
@@ -1,13 +1,34 @@
 .signUp-section {
   margin: 0 auto;
-  margin-top: 20vh;
+  margin-top: 10vh;
   width: 50vw;
   background-color: rgb(239, 237, 237);
-  border-radius: 7%;
+  border-radius: 20px;
   /* border: 1px solid black; */
   padding: 3rem;
 }
 
+@media (max-width: 900px) {
+  .signUp-section {
+    min-width: 90vw;
+    margin-top: 2rem;
+  }
+  .signUp-section form input {
+    min-width: 50vw;
+  }
+  .signUp-button {
+    min-width: 30vw;
+  }
+}
+
+.alrdy-have-accnt-p {
+  margin-top: 1rem;
+  font-size: 1.5rem;
+  font-weight: normal;
+}
+.alrdy-have-accnt-p span {
+  font-weight: bold;
+}
 .signUp-h2 {
   margin-bottom: 2rem;
 }
@@ -22,6 +43,8 @@
 .signUp-section form input {
   width: 20vw;
   margin: 0 auto;
+  padding: 0.5rem;
+  border-radius: 10px;
 }
 
 .admin-box {
@@ -36,11 +59,13 @@
 
 .signUp-button {
   background-color: black;
+  margin: 0 auto;
+  width: 20vw;
   padding: 0.5rem;
   font-weight: bold;
   color: white;
   margin-top: 2rem;
-  border-radius: 10%;
+  border-radius: 10px;
 }
 
 .signUp-button:hover {
