--- a/frontend/src/Pages/ShopCart/shopCart.css
+++ b/frontend/src/Pages/ShopCart/shopCart.css
@@ -5,7 +5,7 @@
 
 .shopCart-section {
   /* background-color: red; */
-  background-color: gray;
+  background-color: rgb(206, 205, 205);
   border-radius: 20px;
   padding: 2rem;
   margin: 2rem;
@@ -24,16 +24,18 @@
 }
 
 .shopCart-item {
-  border: 1px solid black;
+  border: 0.1px solid black;
+  background-color: rgb(239, 237, 237);
   width: 90%;
-  height: 30%;
+  height: 200px;
   padding: 1rem;
-  border-radius: 20px;
+  border-radius: 10px;
   margin: 0 auto;
   font-size: 1rem;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  gap: 2rem;
   align-items: center;
 }
 
@@ -57,6 +59,7 @@
 .shopCart-item button {
   border: none;
   margin-bottom: 1rem;
+  /* background-color: none; */
 }
 
 .shopCart-item p {
@@ -87,10 +90,10 @@
   border-radius: 10px;
   padding: 1rem;
   font-weight: bold;
-  color: gray;
+  color: white;
 }
 
 .Pay-btn:hover {
-  box-shadow: 2px 2px 20px 1px black;
+  box-shadow: 2px 2px 20px 1px white;
   cursor: pointer;
 }
