--- a/frontend/src/Pages/WishList/wishList.css
+++ b/frontend/src/Pages/WishList/wishList.css
@@ -8,35 +8,78 @@
 }
 
 .wishList-section {
-  margin: 0 auto;
-  width: 50vw;
-  margin-top: 5rem;
-  background-color: gray;
+  background-color: rgb(206, 205, 205);
   border-radius: 20px;
-  padding: 3rem;
-  font-size: 1.2rem;
+  padding: 2rem;
+  margin: 2rem;
+  margin-top: 5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .wishList-section a {
   font-weight: bold;
   font-size: 1.5rem;
 }
+.wishList-section button {
+  border: none;
+}
 
 .wish-list {
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
-  gap: 2 rem;
+  justify-content: center;
 }
 
 .wishList-item {
-  border: 1px solid black;
+  border: 0.1px solid black;
+  background-color: rgb(239, 237, 237);
+  width: 90%;
+  height: 200px;
   padding: 2rem;
-  border-radius: 5%;
-  height: 35vh;
-  width: 40vw;
-  font-size: 2rem;
+  border-radius: 10px;
+  margin: 0 auto;
+  font-size: 1rem;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  gap: 5rem;
+  gap: 10rem;
+  align-items: center;
+}
+
+.wish-list img {
+  width: 20%;
+  object-fit: contain;
+  border-radius: 10px;
+  transition: 0.3s;
+}
+
+.wish-list img:hover {
+  transform: scale(1.1);
+}
+
+.wish-list p {
+  font-size: 1rem;
+}
+
+.btns-div {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.btns-div button {
+  background-color: black;
+  border-radius: 10px;
+  margin: 0.5rem;
+  padding: 1rem;
+  font-weight: bold;
+  color: white;
+  margin-top: 2rem;
+}
+.btns-div button:hover {
+  box-shadow: 2px 2px 20px 1px white;
+  cursor: pointer;
 }
