--- a/frontend/src/Components/Search/serach-filter.css
+++ b/frontend/src/Components/Search/serach-filter.css
@@ -18,3 +18,11 @@
     margin-top: 20rem;
   }
 }
+.search-right ul li {
+  transition: 0.3s;
+}
+
+.search-right ul li:hover {
+  transform: scale(1.3);
+  cursor: pointer;
+}
