--- a/frontend/src/Pages/ObjectInfo/objectInfo.css
+++ b/frontend/src/Pages/ObjectInfo/objectInfo.css
@@ -1,11 +1,17 @@
 .objectInfo-section {
   margin: 0 auto;
-  margin-top: 5rem;
+  margin-top: 7rem;
   background-color: rgb(239, 237, 237);
   border-radius: 20px;
   padding: 2rem;
 }
-
+.handle-btn {
+  border: none;
+  transition: 0.3s;
+}
+.handle-btn:hover {
+  transform: scale(1.5);
+}
 .info {
   display: flex;
   justify-content: space-between;
@@ -18,12 +24,31 @@
 .info p {
   font-size: 1.5rem;
 }
+.product-title {
+  font-size: 1.2rem;
+  text-decoration: underline;
+}
 
 .info img {
-  width: 30%;
+  width: 40%;
   height: 30%;
   border-radius: 7%;
   transition: 0.3s;
+  margin-bottom: 1rem;
+}
+@media (max-width: 750px) {
+  .info img {
+    width: 90%;
+    margin: 0rem 1rem;
+  }
+
+  .objectInfo-section {
+    margin: 3rem 2rem;
+    padding: 0.5rem;
+  }
+  .obj-info-bottom-section {
+    width: 90%;
+  }
 }
 .info img:hover {
   transform: scale(1.1);
@@ -34,7 +59,6 @@
   border: 1px solid black;
   padding: 1rem;
   border-radius: 20px;
-  width: 50%;
   margin: 0 auto;
 }
 
@@ -50,7 +74,13 @@
 
 .add-to-cart-btn {
   border-radius: 10px;
+  font-weight: bold;
+  font-size: 1.4rem;
   padding: 0.3rem;
+  transition: 0.3s;
+}
+.add-to-cart-btn:hover {
+  transform: scale(1.2);
 }
 
 .back-btn {
@@ -61,9 +91,11 @@
   font-weight: bold;
   color: white;
   margin-top: 2rem;
+  transition: 0.3s;
 }
 
 .back-btn:hover {
   box-shadow: 2px 2px 20px 1px black;
   cursor: pointer;
+  transform: scale(1.1);
 }
