--- a/frontend/src/Pages/ShopCart/shopCart.css
+++ b/frontend/src/Pages/ShopCart/shopCart.css
@@ -26,8 +26,8 @@
 .shopCart-item {
   border: 0.1px solid black;
   background-color: rgb(239, 237, 237);
-  width: 90%;
-  height: 200px;
+  /* width: 90%;
+  height: 200px; */
   padding: 1rem;
   border-radius: 10px;
   margin: 0 auto;
@@ -35,10 +35,22 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  gap: 2rem;
+  gap: 0.5rem;
   align-items: center;
 }
 
+@media (max-width: 950px) {
+  .shopCart-item {
+    height: auto;
+  }
+  .shopCart-list {
+    gap: 5rem;
+    padding: none;
+  }
+  .cart-item-img {
+    width: 80%;
+  }
+}
 .cart-item-img {
   width: 20%;
   object-fit: contain;
