--- a/frontend/src/Pages/OrderPage/orderPage.css
+++ b/frontend/src/Pages/OrderPage/orderPage.css
@@ -4,23 +4,58 @@
   justify-content: center;
   gap: 2rem;
   margin: 2rem;
+  margin-top: 10rem;
 }
+
+@media (max-width: 900px) {
+  .order-section {
+    width: 90%;
+    flex-direction: column;
+    margin: 0 auto;
+    margin-top: 10rem;
+  }
+  .orderItems {
+    /* width: 90%; */
+    padding: 3rem;
+    margin: 0 auto;
+    flex-direction: column;
+  }
+}
+
+.bck-to-shop-btn {
+  padding: 1.2rem;
+  font-size: 2rem;
+  width: 15rem;
+  margin-top: 3rem;
+  background-color: black;
+  color: white;
+  font-weight: bold;
+}
+
 .order-section h1 {
-  font-size: 2.5rem;
+  font-size: 2rem;
   font-weight: bold;
 }
 .order-section p {
-  font-size: 1.7rem;
+  font-size: 1rem;
   font-weight: normal;
   margin: 0 auto;
   padding: 0.5rem;
 }
 .left-sec {
-  width: 50vw;
+  /* width: 50vw; */
+  margin: 0 auto;
   padding: 1rem;
   background-color: gray;
   border-radius: 20px;
 }
+/* 
+@media (max-width: 900px) {
+  .left-sec {
+    width: none;
+  }
+} */
+
 .paymnt-info {
   border: 1px solid black;
   padding: 2rem;
@@ -41,7 +76,7 @@
 }
 
 .right-sec {
-  width: 50vw;
+  /* width  : 50vw; */
   padding: 1rem;
   background-color: gray;
   align-items: center;
@@ -51,4 +86,19 @@
 
 .flex {
   display: flex;
+}
+
+.btns-panel {
+  border: 3px gold solid;
+  display: flex;
+  flex-direction: column;
+}
+.btns-panel button:first-child {
+  margin-bottom: 20px;
+}
+
+.place-order-btnArea {
+  margin-top: 3rem;
+  display: flex;
+  flex-direction: column;
 }
