--- a/frontend/src/Pages/ShopCart/shopCart.css
+++ b/frontend/src/Pages/ShopCart/shopCart.css
@@ -4,7 +4,7 @@
 }
 
 .shopCart-section {
-  /* background-color: red; */
+  /* width: none; */
   background-color: rgb(206, 205, 205);
   border-radius: 20px;
   padding: 2rem;
@@ -12,6 +12,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  margin: 0 auto;
+  margin-bottom: 2rem;
 }
 
 .shopCart-list {
@@ -19,15 +21,21 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  /* padding: none; */
   /* background-color: lightgray; */
   /* background-color: green; */
 }
 
+/* .shopCart-list {
+  padding-left: none;
+  margin: 0 auto;
+} */
+
 .shopCart-item {
   border: 0.1px solid black;
   background-color: rgb(239, 237, 237);
-  /* width: 90%;
-  height: 200px; */
+  /* width: 90%; */
+  /* height: 200px; */
   padding: 1rem;
   border-radius: 10px;
   margin: 0 auto;
@@ -66,7 +74,8 @@
   background-color: white;
   width: 4rem;
   border-radius: 10px;
-  margin-bottom: 0.5rem;
+  /* margin-bottom: 1rem; */
+  margin: 0 auto;
 }
 .shopCart-item button {
   border: none;
@@ -84,7 +93,7 @@
 @media (max-width: 950px) {
   .shopCart-item {
     background-color: rgb(239, 237, 237);
-    padding: 1.5rem;
+    /* padding: 1.5rem; */
     border-radius: 10px;
     flex-direction: column;
     justify-content: space-between;
