--- a/frontend/src/Pages/WishList/wishList.css
+++ b/frontend/src/Pages/WishList/wishList.css
@@ -31,26 +31,34 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  margin: 0 auto;
+  padding-left: none;
+}
+
+@media (max-width: 900px) {
+  .wishList-item {
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 .wishList-item {
   border: 0.1px solid black;
   background-color: rgb(239, 237, 237);
   width: 90%;
-  height: 200px;
+  /* height: 200px; */
   padding: 2rem;
   border-radius: 10px;
   margin: 0 auto;
   font-size: 1rem;
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
   gap: 10rem;
   align-items: center;
 }
 
 .wish-list img {
-  width: 20%;
+  width: 20vw;
   object-fit: contain;
   border-radius: 10px;
   transition: 0.3s;
