--- a/frontend/src/Components/Side-nav/sideNav.css
+++ b/frontend/src/Components/Side-nav/sideNav.css
@@ -1,15 +1,20 @@
 .side-nav {
+  display: none;
+}
+
+.show {
+  display: inline;
   padding: 0;
   background-color: white;
   align-items: center;
   z-index: 10;
   font-size: 1.6rem;
   /* margin-top: 137px; */
+
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   gap: 0rem;
-  display: none;
   border: 2px solid black;
   position: absolute;
   position: fixed;
