--- a/frontend/src/Pages/WishList/wishList.css
+++ b/frontend/src/Pages/WishList/wishList.css
@@ -16,6 +16,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  /* margin: 0 auto; */
 }
 
 .wishList-section a {
@@ -27,12 +28,13 @@
 }
 
 .wish-list {
-  margin: 0 auto;
+  /* margin: 0 auto; */
   display: flex;
   flex-direction: column;
   justify-content: center;
+  gap: 2rem;
+  padding-left: 0;
   margin: 0 auto;
-  padding-left: none;
 }
 
 @media (max-width: 900px) {
@@ -49,12 +51,12 @@
   /* height: 200px; */
   padding: 2rem;
   border-radius: 10px;
-  margin: 0 auto;
   font-size: 1rem;
   display: flex;
   justify-content: space-between;
-  gap: 10rem;
+  gap: 3rem;
   align-items: center;
+  margin: 0 auto;
 }
 
 .wish-list img {
